--- a/src/pages/map/map.scss
+++ b/src/pages/map/map.scss
@@ -1,3 +1,11 @@
 page-map {
+    .map-container {
+        position: absolute;
+        top: 0px;
+        bottom: 0px;
+        width: 100%;
+        height: 100%;
+    }
 
+    
 }
