bar displaying menu with filter by type

--- a/src/pages/barDetails/barDetails.scss
+++ b/src/pages/barDetails/barDetails.scss
@@ -1,2 +1,14 @@
 page-barDetails {
+    .selects {
+        padding-left: 3%;
+    }
+
+    ion-label {
+        display: inline-block;
+        font-size: 18px;
+      }
+
+      ion-checkbox {
+          top: -16px;
+      }
 }
