--- a/src/pages/barDetails/barDetails.scss
+++ b/src/pages/barDetails/barDetails.scss
@@ -2,6 +2,10 @@ page-barDetails {
     .selects {
         padding-left: 3%;
     }
+    .productCard {
+        padding-left: 3%;
+        padding-right: 3%;
+    }
 
     ion-label {
         display: inline-block;
