--- a/src/pages/barDetails/barDetails.scss
+++ b/src/pages/barDetails/barDetails.scss
@@ -7,12 +7,18 @@ page-barDetails {
         padding-right: 3%;
     }
 
+    rating {
+        ion-icon {
+          padding: 0em !important;
+        }
+    }
+
     ion-label {
         display: inline-block;
         font-size: 18px;
-      }
+    }
 
-      ion-checkbox {
-          top: -16px;
-      }
+    ion-checkbox {
+        top: -16px;
+    }
 }
