adding products img in barDetails

--- a/src/pages/barDetails/barDetails.scss
+++ b/src/pages/barDetails/barDetails.scss
@@ -7,6 +7,14 @@ page-barDetails {
         padding-right: 3%;
     }
 
+    .product-img {
+        width:50px;
+        height:50px;
+        float: right;
+        margin-top: 1em;
+        margin-right: 2em;
+    }
+
     rating {
         ion-icon {
           padding: 0em !important;
