--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,25 @@
 page-home {
+    img {
+        -webkit-filter: blur(1.2px);
+        filter: blur(1.2px);
+        width:100%;
+        height:100%;
+    }
 
+    .container {
+        position: relative;
+        text-align: center;
+        color: white;
+        height: 33%;
+        padding-top: 1%;
+    }
+    
+    .centered {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 30px;
+    }
+    
 }
